# swift-api-graphql

./: .gitignore  LICENSE  README.md  amplify-stage.sh  configure.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tasks.py  watch.sh
.github/workflows/: tests.yml
docker/: Dockerfile  docker-compose.yml  version.sh
docs/: setup-linux.md  setup-macos.md
scripts/: podman-delete.sh  podman.sh
src/swift_api_graphql/: app.py  config.py  database.py  models.py  schema.py
test/: test_books.py  test_root.py
